--- a/cursos/espanol/programacion/E5_id_y_scope.ipynb
+++ b/cursos/espanol/programacion/E5_id_y_scope.ipynb
@@ -276,6 +276,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "6e8e064b-84dd-4def-96fe-13ac3ff91db0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dentro de la función: 11\n",
+      "Fuera de la función: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def modificar_valor(copia):\n",
+    "    copia = copia + 1\n",
+    "    print(\"Dentro de la función:\", copia)\n",
+    "\n",
+    "valor = 10\n",
+    "modificar_valor(valor)\n",
+    "print(\"Fuera de la función:\", valor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7924adc2-477d-4845-b48d-4d23452c78ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dentro de la función: [1, 2, 3, 4]\n",
+      "Fuera de la función: [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def modificar_lista(lista):\n",
+    "    lista.append(4)\n",
+    "    print(\"Dentro de la función:\", lista)\n",
+    "\n",
+    "mi_lista = [1, 2, 3]\n",
+    "modificar_lista(mi_lista)\n",
+    "print(\"Fuera de la función:\", mi_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf5aca4b-a0a4-4417-9414-7693112ecd18",
+   "metadata": {},
+   "source": [
+    "Otro ejemplo mas:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "2cb7d496-26b8-43d3-bb39-e62f476ce090",
    "metadata": {},
