New OpenAI api fixes

--- a/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
@@ -25,18 +25,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4346dadb-74be-4b7c-8eee-1f8752515cef",
+   "id": "49f7e79f-64f6-4880-af61-581a28a8086a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
+    "from openai import OpenAI\n",
     "\n",
     "#Cargar token desde google drive\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
+    "\n",
     "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
     "    token = f.read()\n",
-    "    openai.api_key = token"
+    "    client = OpenAI(\n",
+    "        # defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
+    "        api_key=token,\n",
+    "    )"
    ]
   },
   {
@@ -48,12 +52,12 @@
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
+    "    response = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=messages,\n",
     "        temperature=0, # aleatoriedad de las respuestas del modelo\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -93,7 +97,7 @@
    "outputs": [],
    "source": [
     "text = f\"\"\"\n",
-    "\"Debes expresar lo que quieres que un modelo haga \\\n",
+    "Debes expresar lo que quieres que un modelo haga \\\n",
     "proporcionando instrucciones que sean lo más claras \\\n",
     "y específicas posibles. Esto guiará al modelo hacia la \\\n",
     "salida deseada y reducirá las posibilidades de recibir \\\n",
@@ -101,7 +105,7 @@
     "una instrucción clara con escribir una instrucción breve. \\\n",
     "En muchos casos, las instrucciones más largas proporcionan más \\\n",
     "claridad y contexto para el modelo, lo que puede resultar en \\\n",
-    "salidas más detalladas y relevantes.\"\n",
+    "salidas más detalladas y relevantes.\n",
     "\"\"\"\n",
     "\n",
     "prompt = f\"\"\"\n",
