--- a/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb
+++ b/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb
@@ -13,6 +13,8 @@
     "2. El **procesamiento** de esos datos (el programa propiamente dicho)\n",
     "3. La **salida** que es el resultado que obtenemos luego de procesar los datos\n",
     "\n",
+    "![Entrada,Proceso,Salida](img/entrada_proceso_salida.png)\n",
+    "\n",
     "En esta unidad la entrada va a estar dada por lo que el usuario ingrese por teclado con la funcion **input()**. El procesamiento va a ser el codigo que escribamos para obtener el resultado deseado y la salida va a estar dada por el resultado que mostremos por pantalla utilizando la funcion **print()**.\n",
     "\n",
     "Veamos ejemplos haciendo ejercicios:"
