--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -54,8 +54,7 @@
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "chat = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
-    "chat"
+    "chat = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
    ]
   },
   {
