MNIST examples added

--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conversation.predict(input=\"Hi, my name is Andrew\")"
+    "conversation.predict(input=\"Hola mi nombre es Hernan\")"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conversation.predict(input=\"What is 1+1?\")"
+    "conversation.predict(input=\"Cuanto es 20 + 22?\")"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conversation.predict(input=\"What is my name?\")"
+    "conversation.predict(input=\"Cual es mi nombre?\")"
    ]
   },
   {
@@ -300,8 +300,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "memory.save_context({\"input\": \"Hi\"}, \n",
-    "                    {\"output\": \"What's up\"})"
+    "memory.save_context({\"input\": \"Hola\"}, \n",
+    "                    {\"output\": \"Como estas?\"})"
    ]
   },
   {
@@ -331,8 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "memory.save_context({\"input\": \"Not much, just hanging\"}, \n",
-    "                    {\"output\": \"Cool\"})"
+    "memory.save_context({\"input\": \"Bien, descansando\"}, \n",
+    "                    {\"output\": \"Que bueno\"})"
    ]
   },
   {
