Modal popup for videos added

--- a/cursos/espanol/programacion/0_intro.ipynb
+++ b/cursos/espanol/programacion/0_intro.ipynb
@@ -8,9 +8,7 @@
     "\n",
     "Empecemos utilizando Python como si fuera una calculadora.\n",
     "\n",
-    "Escribimos una suma y presionamos el icono ▶️ para ejecutar (se encuentra a la izquierda de cada celda que contiene nuestro codigo de programacion, aparece cuando posicionamos el mouse encima de el)\n",
-    "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/LOPzWyyT23k\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>"
+    "Escribimos una suma y presionamos el icono ▶️ para ejecutar (se encuentra a la izquierda de cada celda que contiene nuestro codigo de programacion, aparece cuando posicionamos el mouse encima de el)"
    ]
   },
   {
