--- a/cursos/espanol/deeplearning/LangChain_Agents.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Agents.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b61b9f67-0e88-4844-92ee-6867ae99e15c",
+   "id": "93460a56-4979-4e95-8479-b43c3fb8e43c",
    "metadata": {},
    "source": [
-    "# LangChain Agents\n",
+    "# Agents o Assistants\n",
     "\n",
-    "Aqui nos enfocaremos en las cadenas o Chains que son muy importantes en la libreria LangChain y por ello estan en su nombre.\n",
+    "Sabemos que los LLMs son grandes cajas negras que interpretan el lenguaje natural y nos pueden dar respuestas tambien en nuestro lenguaje de acuerdo a la informacion que tienen comprimida adentro de acuerdo a su entrenamiento.\n",
     "\n",
-    "Las Chains nos permiten encadenar la salida de una consulta a un LLM con la entrada a otra consulta y asi conseguir mejores resultados y mas complejos."
+    "Que pasa si a estos LLMs ademas les damos herramientas para que puedan obtener informacion actualizada y verificada del mundo real?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e44423f0-ac35-41cc-b93c-6d320c2ff0f3",
+   "cell_type": "markdown",
+   "id": "3e49ef5f-a2a2-4eac-80f7-3b28bfb44369",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## OpenAI Functions and LangChain Tools\n",
+    "\n",
+    "Veamos como podemos darles estas herramientas a los LLMs. En OpenAI les llaman functions y en LangChain Tools:"
+   ]
   },
   {
    "cell_type": "code",
@@ -26,7 +28,201 @@
    "id": "e33017cc-fa5d-4484-b88e-9d88055f0f2b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install openai --upgrade --quiet\n",
+    "!pip install langchain --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c905551-8406-4f0e-b937-cbab50a98f4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "\n",
+    "# Cargar token desde google drive\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
+    "    token = f.read()\n",
+    "    openai.api_key = token"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51422385-9e51-43ac-b625-c42ba963eae7",
+   "metadata": {},
+   "source": [
+    "### OpenAI functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05f2e9f5-17ab-4aee-99e4-c7911a2b5736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Example dummy function hard coded to return the same weather\n",
+    "# In production, this could be your backend API or an external API\n",
+    "def get_current_weather(location, unit=\"fahrenheit\"):\n",
+    "    \"\"\"Get the current weather in a given location\"\"\"\n",
+    "    weather_info = {\n",
+    "        \"location\": location,\n",
+    "        \"temperature\": \"72\",\n",
+    "        \"unit\": unit,\n",
+    "        \"forecast\": [\"sunny\", \"windy\"],\n",
+    "    }\n",
+    "    return json.dumps(weather_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c6c1144-c0c5-41bd-b24f-28f00072358c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a function\n",
+    "functions = [\n",
+    "    {\n",
+    "        \"name\": \"get_current_weather\",\n",
+    "        \"description\": \"Get the current weather in a given location\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"location\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
+    "                },\n",
+    "                \"unit\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"]},\n",
+    "            },\n",
+    "            \"required\": [\"location\"],\n",
+    "        },\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1162d620-4d8c-456a-80d6-d986b1893ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"What's the weather like in Boston?\"\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7de56e2f-35ba-4358-873f-5399a2c3b0f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo-0613\",\n",
+    "    messages=messages\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fd2da8b-e2e8-4f29-8372-ff3ca30cf7db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo-0613\",\n",
+    "    messages=messages,\n",
+    "    functions=functions\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0874effc-5616-4f30-98a0-4e99b0cdb24c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Creando nuestra propia tool en LangChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f70e9fa-dc04-4a1e-8f4a-61e142a11ef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.agents import tool\n",
+    "from datetime import date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a260840a-87a5-4363-9000-158c008f3a1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def time(text: str) -> str:\n",
+    "    \"\"\"Returns todays date, use this for any \\\n",
+    "    questions related to knowing todays date. \\\n",
+    "    The input should always be an empty string, \\\n",
+    "    and this function will always return todays \\\n",
+    "    date - any date mathmatics should occur \\\n",
+    "    outside this function.\"\"\"\n",
+    "    return str(date.today())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c8dfc4e-8415-4a4b-86bd-3f75f0ceb7e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent= initialize_agent(\n",
+    "    tools + [time], \n",
+    "    llm, \n",
+    "    agent=AgentType.CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
+    "    handle_parsing_errors=True,\n",
+    "    verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c019de52-6a7d-4a87-aa0f-d45616ef5ee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    result = agent(\"whats the date today?\") \n",
+    "except: \n",
+    "    print(\"exception on external access\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b61b9f67-0e88-4844-92ee-6867ae99e15c",
+   "metadata": {},
+   "source": [
+    "## LangChain Agents"
+   ]
   },
   {
    "cell_type": "code",
@@ -47,11 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.agents.agent_toolkits import create_python_agent\n",
     "from langchain.agents import load_tools, initialize_agent\n",
     "from langchain.agents import AgentType\n",
-    "from langchain.tools.python.tool import PythonREPLTool\n",
-    "from langchain.python import PythonREPL\n",
     "from langchain.chat_models import ChatOpenAI"
    ]
   },
@@ -144,6 +337,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.agents.agent_toolkits import create_python_agent\n",
+    "from langchain.tools.python.tool import PythonREPLTool\n",
+    "from langchain.python import PythonREPL\n",
+    "\n",
     "agent = create_python_agent(\n",
     "    llm,\n",
     "    tool=PythonREPLTool(),\n",
@@ -197,71 +394,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0874effc-5616-4f30-98a0-4e99b0cdb24c",
-   "metadata": {},
-   "source": [
-    "## Creando nuestra propia tool para un agente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f70e9fa-dc04-4a1e-8f4a-61e142a11ef6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.agents import tool\n",
-    "from datetime import date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a260840a-87a5-4363-9000-158c008f3a1e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@tool\n",
-    "def time(text: str) -> str:\n",
-    "    \"\"\"Returns todays date, use this for any \\\n",
-    "    questions related to knowing todays date. \\\n",
-    "    The input should always be an empty string, \\\n",
-    "    and this function will always return todays \\\n",
-    "    date - any date mathmatics should occur \\\n",
-    "    outside this function.\"\"\"\n",
-    "    return str(date.today())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c8dfc4e-8415-4a4b-86bd-3f75f0ceb7e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent= initialize_agent(\n",
-    "    tools + [time], \n",
-    "    llm, \n",
-    "    agent=AgentType.CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
-    "    handle_parsing_errors=True,\n",
-    "    verbose = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c019de52-6a7d-4a87-aa0f-d45616ef5ee9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    result = agent(\"whats the date today?\") \n",
-    "except: \n",
-    "    print(\"exception on external access\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "27623d45-ddc2-4309-9515-037c3b44e8e2",
    "metadata": {},
    "source": [
@@ -281,74 +413,6 @@
     "\n",
     "https://artificialcorner.com/how-to-build-tool-using-agents-with-langchain-d9fa9674b6c7"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79fd0438-3db7-44ce-8145-6750947f1614",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.agents import Tool, AgentExecutor, BaseSingleActionAgent\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.utilities import SerpAPIWrapper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c905551-8406-4f0e-b937-cbab50a98f4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45290edf-2147-4f7f-b4dc-4ffa70095686",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05f2e9f5-17ab-4aee-99e4-c7911a2b5736",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c6c1144-c0c5-41bd-b24f-28f00072358c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1162d620-4d8c-456a-80d6-d986b1893ccc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7de56e2f-35ba-4358-873f-5399a2c3b0f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fd2da8b-e2e8-4f29-8372-ff3ca30cf7db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
