--- a/cursos/espanol/programacion/1_variables.ipynb
+++ b/cursos/espanol/programacion/1_variables.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = 4 + 5"
+    "suma = 4 + 5"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m"
+    "suma"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m + 20 + mi_otro_valor"
+    "suma + 20 + mi_otro_valor"
    ]
   },
   {
