--- a/cursos/espanol/programacion/2_condiciones.ipynb
+++ b/cursos/espanol/programacion/2_condiciones.ipynb
@@ -5,7 +5,7 @@
    "id": "87bfd527-e8b4-49b4-aef4-025b1fe0e143",
    "metadata": {},
    "source": [
-    "# Condiciones\n",
+    "# Comparar dos valores (Condiciones)\n",
     "\n",
     "Una condicion es una comparacion de dos elementos y su resultado puede ser verdadero o falso"
    ]
