--- a/cursos/espanol/programacion/7_listas.ipynb
+++ b/cursos/espanol/programacion/7_listas.ipynb
@@ -5,7 +5,7 @@
    "id": "6901dc39-9dc0-4725-bb3b-5352e4f72dcd",
    "metadata": {},
    "source": [
-    "# Muchas variables con un solo nombre"
+    "# Muchas variables con un solo nombre (listas)"
    ]
   },
   {
