--- a/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb
+++ b/cursos/espanol/programacion/9_corchetes_listas_strings.ipynb
@@ -5,7 +5,7 @@
    "id": "2337c58b-6789-4466-a435-1c9c8aec707e",
    "metadata": {},
    "source": [
-    "# Corchetes [] en listas y strings"
+    "# Partir listas y strings (usando slicing [])"
    ]
   },
   {
