--- a/cursos/espanol/programacion/4_while.ipynb
+++ b/cursos/espanol/programacion/4_while.ipynb
@@ -6,7 +6,7 @@
     "id": "baTFKcSLliLb"
    },
    "source": [
-    "# Mientras esto no cambie repite"
+    "# Mientras esto no cambie repite (while)"
    ]
   },
   {
