--- a/cursos/espanol/programacion/1_variables.ipynb
+++ b/cursos/espanol/programacion/1_variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Guardando resultados en la memoria (Memoria y Variables)\n",
+    "# Guardando resultados en la memoria (variables)\n",
     "\n",
     "Guardemos los resultados generados en la memoria mediante el uso de variables. Cuando querramos guardar un valor en la memoria de la computadora tendremos que elegir un nombre cualquiera y ese valor quedara asociado con ese nombre"
    ]
