--- a/cursos/espanol/programacion/0_intro.ipynb
+++ b/cursos/espanol/programacion/0_intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Una calculadora Potente (introduccion a python)\n",
+    "# Una calculadora potente (introduccion a python)\n",
     "\n",
     "Empecemos utilizando Python como si fuera una calculadora.\n",
     "\n",
