--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -397,9 +397,7 @@
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/)\n",
-    "\n",
-    "- https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/"
+    "Esta unidad esta basada en el [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/)"
    ]
   },
   {
