--- a/cursos/espanol/deeplearning/LangChain_RAG.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_RAG.ipynb
@@ -343,28 +343,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d84bd6e-353d-4f96-a008-229dc9afd977",
+   "cell_type": "markdown",
+   "id": "df8084f8-74c0-4e7b-bdc1-33b31c588aad",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "532fb955-6518-485a-a8c7-95aa6ed45151",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9a857c9-aec5-483a-b066-3545dc01dd19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Curso Avanzado\n",
+    "\n",
+    "- https://www.youtube.com/watch?v=3WUobZryyok\n",
+    "- https://learn.deeplearning.ai/courses/vector-databases-embeddings-applications"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -372,9 +359,7 @@
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/)\n",
-    "\n",
-    "Meta, articulo original sobre RAG: https://ai.meta.com/blog/retrieval-augmented-generation-streamlining-the-creation-of-intelligent-natural-language-processing-models/"
+    "Esta unidad esta basada en el [curso de Andrew Ng de Deeplearning.ai](https://ai.meta.com/blog/retrieval-augmented-generation-streamlining-the-creation-of-intelligent-natural-language-processing-models/)"
    ]
   },
   {
