--- a/cursos/espanol/programacion/3_if.ipynb
+++ b/cursos/espanol/programacion/3_if.ipynb
@@ -6,7 +6,7 @@
     "id": "baTFKcSLliLb"
    },
    "source": [
-    "# Si pasa algo entonces haz esto (if y else)\n",
+    "# Si la condicion es verdadera haz esto (if y else)\n",
     "\n"
    ]
   },
