--- a/cursos/espanol/deeplearning/LangChain_Agents.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Agents.ipynb
@@ -428,7 +428,7 @@
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/)"
+    "Esta unidad esta basada en el [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/)"
    ]
   },
   {
