--- a/cursos/espanol/programacion/3_if.ipynb
+++ b/cursos/espanol/programacion/3_if.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "### Ejercicio 2:\n",
     "\n",
-    "Asignar un valor a la variable edad para que la variable mayor_de_edad obtenga el valor \"SI es mayor de edad\" "
+    "Asignar un valor a la variable edad para que la variable **mayor_de_edad** obtenga el valor **\"SI es mayor de edad\"** "
    ]
   },
   {
@@ -158,6 +158,45 @@
     "if edad >= 18:\n",
     "    mayor_de_edad = \"SI es mayor de edad\"\n",
     "mayor_de_edad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2.1:\n",
+    "\n",
+    "Copiar el ejercicio anterior pero crear una variable llamada **descuento** que contenga un valor booleano (True o False) de acuerdo a si la variable edad es menor a 10 o mayor a 80"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edad = 85\n",
+    "descuento = False\n",
+    "# Escribir a continuacion tu solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 2.1 {display-mode:\"form\"}\n",
+    "\n",
+    "edad = 85\n",
+    "descuento = False\n",
+    "# Escribir a continuacion tu solucion\n",
+    "if (edad < 10) or (edad > 80):\n",
+    "    descuento = True\n",
+    "\n",
+    "descuento"
    ]
   },
   {
