Added Finetuning with Pytorch

--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install transformers[torch] --quiet\n",
-    "!pip install datasets --quiet"
+    "!pip install transformers[torch] --upgrade --quiet\n",
+    "!pip install datasets --upgrade --quiet"
    ]
   },
   {
@@ -48,8 +48,8 @@
    "id": "1f1f8069-b6bd-4c77-a0a7-205a30f92654",
    "metadata": {},
    "source": [
-    "https://github.com/huggingface/datasets\n",
-    "https://huggingface.co/datasets"
+    "- https://github.com/huggingface/datasets\n",
+    "- https://huggingface.co/datasets"
    ]
   },
   {
@@ -490,6 +490,7 @@
    "source": [
     "#### Referencias:\n",
     "\n",
+    "- https://huggingface.co/docs/transformers/notebooks\n",
     "- https://github.com/NielsRogge/Transformers-Tutorials/tree/master/VisionTransformer\n",
     "- https://huggingface.co/blog/fine-tune-vit"
    ]
