--- a/cursos/espanol/deeplearning/Backprop_PytorchAutograd.ipynb
+++ b/cursos/espanol/deeplearning/Backprop_PytorchAutograd.ipynb
@@ -63,26 +63,31 @@
    "id": "cd937ea4-b1b1-4835-ade3-38de484d227c",
    "metadata": {},
    "source": [
-    "#### inputs\n",
+    "#### Entradas:\n",
+    "```\n",
     "x = -2; y = 5; z = -4\n",
+    "```\n",
     "\n",
-    "#### forward pass\n",
+    "#### Paso hacia adelante:\n",
+    "```\n",
+    "q = x + y   --->   3 \n",
     "\n",
-    "q = x + y \n",
+    "f = q * z   --->   3 * -4 = -12 \n",
+    "```\n",
     "\n",
-    "f = q * z \n",
+    "#### Primer paso del backprop: f = q * z\n",
+    "```\n",
+    "df/dz = q   --->   3\n",
     "\n",
-    "#### first backprop through f = q * z\n",
+    "df/dq = z   --->   -4\n",
+    "```\n",
     "\n",
-    "df/dz = q  \n",
+    "#### Segundo paso del backprop: q = x + y\n",
+    "```\n",
+    "df/dx = df/dq * dq/dx   --->   z * 1 = -4\n",
     "\n",
-    "df/dq = z\n",
-    "\n",
-    "#### now backprop through q = x + y\n",
-    "\n",
-    "df/dx = df/dq * dq/dx\n",
-    "\n",
-    "df/dy = df/dq * dq/dy"
+    "df/dy = df/dq * dq/dy   --->   z * 1 = -4\n",
+    "```"
    ]
   },
   {
