--- a/cursos/espanol/deeplearning/E4_Convolutional_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E4_Convolutional_Arch.ipynb
@@ -5,12 +5,21 @@
    "id": "7e1e9e37-db00-4140-b173-6d43dc76577f",
    "metadata": {},
    "source": [
-    "### Modelos convolucionales\n",
+    "# Redes Convolucionales\n",
     "\n",
-    "Librerias open source:\n",
-    "- keras: https://keras.io/api/applications/\n",
-    "- pytorch: https://pytorch.org/vision/stable/models.html"
+    "[The little book of Deep Learning](https://fleuret.org/public/lbdl.pdf)\n",
+    "\n",
+    "[Visualizacion](https://adamharley.com/nn_vis/)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc28c5e4-335f-44c8-9ffb-604e06950713",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
