--- a/cursos/espanol/deeplearning/E5_Transformer_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformer_Arch.ipynb
@@ -5,13 +5,25 @@
    "id": "5b893fb7-d8f2-4098-98a7-2bb3f959fa85",
    "metadata": {},
    "source": [
-    "### Modelos transformers\n",
+    "# Transformer Architecture\n",
     "\n",
-    "Librerias open source:\n",
-    "- keras: https://keras.io/api/applications/\n",
-    "- pytorch: \n",
-    "- jax: "
+    "[Deep NN course](https://fleuret.org/dlc/)\n",
+    "\n",
+    "[Implement a transformer from scratch with keras](https://keras.io/guides/keras_nlp/transformer_pretraining/)\n",
+    "\n",
+    "[Implement a transformer from scratch with pytorch](https://mohitkpandey.github.io/posts/2020/11/trfm-code/)\n",
+    "\n",
+    "[Visualizing How Vision Transformer works](https://keras.io/examples/vision/probing_vits/)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cdc6e2d-7ee9-467c-ab5b-f8b48100054b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
