--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb
@@ -2266,7 +2266,9 @@
     "\n",
     "- [Curso Avanzado Stanford](https://web.stanford.edu/class/cs224n/index.html#schedule)\n",
     "\n",
-    "- [Implementar Transformers para Clasificacion](https://huggingface.co/transformers/v3.2.0/custom_datasets.html)"
+    "- [Implementar Transformers para Clasificacion](https://huggingface.co/transformers/v3.2.0/custom_datasets.html)\n",
+    "\n",
+    "- https://huggingface.co/docs/transformers/notebooks"
    ]
   },
   {
