Updates to deeplearning tour

--- a/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
@@ -413,12 +413,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cee644c7-6389-4260-890f-7464c8742b68",
+   "cell_type": "markdown",
+   "id": "6aebfe47-24c6-4182-83b8-1fd8707d7176",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
   }
  ],
  "metadata": {
