--- a/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb
@@ -687,6 +687,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d22e9adc-3c5f-4ec0-9c48-ead11abed2c0",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8c7230e-a643-4a50-b89a-dc51271a8303",
    "metadata": {},
    "source": [
