--- a/cursos/espanol/deeplearning/E5_Transformer_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformer_Arch.ipynb
@@ -14,16 +14,25 @@
     "[Implement a transformer from scratch with pytorch](https://mohitkpandey.github.io/posts/2020/11/trfm-code/)\n",
     "\n",
     "[Visualizing How Vision Transformer works](https://keras.io/examples/vision/probing_vits/)\n",
-    "\n"
+    "\n",
+    "[Transformers from Scratch 1](https://e2eml.school/transformers.html)\n",
+    "\n",
+    "[Transformers from Scratch 2](https://peterbloem.nl/blog/transformers)\n",
+    "\n",
+    "[Transformers from Scratch 3](https://www.kaggle.com/code/arunmohan003/transformer-from-scratch-using-pytorch)\n",
+    "\n",
+    "[Transformers from Scratch 4](https://github.com/Khaliladib11/Transformer-from-scratch)\n",
+    "\n",
+    "[Transformers from Scratch 5](https://towardsdatascience.com/build-your-own-transformer-from-scratch-using-pytorch-84c850470dcb)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cdc6e2d-7ee9-467c-ab5b-f8b48100054b",
+   "cell_type": "markdown",
+   "id": "edb781c5-721d-4954-a1e2-8b15397bde41",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
   }
  ],
  "metadata": {
