--- a/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb
@@ -633,6 +633,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7388919-b10c-4b26-b638-24f2e505f70b",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8c7230e-a643-4a50-b89a-dc51271a8303",
    "metadata": {},
    "source": [
