--- a/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb
@@ -667,6 +667,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39b69260-68ff-42de-86a6-211ec46c9ddb",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8c7230e-a643-4a50-b89a-dc51271a8303",
    "metadata": {},
    "source": [
