--- a/cursos/espanol/deeplearning/E1_grafos_backprop_autograd.ipynb
+++ b/cursos/espanol/deeplearning/E1_grafos_backprop_autograd.ipynb
@@ -7,11 +7,7 @@
    "source": [
     "# Backpropagation y Autogradient\n",
     "\n",
-    "1. [Pytorch Autograd Engine](https://pytorch.org/blog/overview-of-pytorch-autograd-engine/)\n",
-    "\n",
-    "2. [Como se construyen los grafos computacionales en Pytorch](https://pytorch.org/blog/computational-graphs-constructed-in-pytorch/)\n",
-    "\n",
-    "3. [Como se ejecutan los grafos computacionales en Pytorch](https://pytorch.org/blog/how-computational-graphs-are-executed-in-pytorch/)"
+    "Toda red neuronal se puede transformar a una serie de operaciones matematicas en un gran gafo. Crear este grafo permite realizar de forma eficiente la paralelizacion de las operaciones matematicas para el calculo de la prediccion y tambien para la correccion de los errores mediante el gradiente descendiente. Veamos ahora calculos simples y como pytoch los transforma a grafos y calcula automaticamente su gradiente."
    ]
   },
   {
@@ -26,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7676c34d-9e6f-4209-92d6-926899107e35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[4.]])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch \n",
     "x = torch.tensor([[2.0]], requires_grad=True)\n",
@@ -412,6 +416,22 @@
     "new_x = Variable(torch.Tensor([[900/1_000,8_000/10_000]]))\n",
     "y_pred = model(new_x)\n",
     "print(\"predicted Y value: \", y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd55c2d1-db67-47c4-8c59-e087f2d35611",
+   "metadata": {},
+   "source": [
+    "# Referencias\n",
+    "\n",
+    "1. [Pytorch Autograd Engine](https://pytorch.org/blog/overview-of-pytorch-autograd-engine/)\n",
+    "\n",
+    "2. [Como se construyen los grafos computacionales en Pytorch](https://pytorch.org/blog/computational-graphs-constructed-in-pytorch/)\n",
+    "\n",
+    "3. [Como se ejecutan los grafos computacionales en Pytorch](https://pytorch.org/blog/how-computational-graphs-are-executed-in-pytorch/)\n",
+    "\n",
+    "4. [Distintos tipos de grafos de NN](https://www.asimovinstitute.org/neural-network-zoo/)"
    ]
   },
   {
