--- a/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb
@@ -223,7 +223,7 @@
     "id": "LOzcw_CjRFSO"
    },
    "source": [
-    "3. Setting the scheduler timesteps creates a tensor with evenly spaced elements in it, 50 in this example. Each element corresponds to a timestep at which the model denoises an image. When you create the denoising loop later, you'll iterate over this tensor to denoise an image:"
+    "3. La cantidad de scheduler timesteps crea un tensor con esa cantidad de elementos separados uniformemente. Cada elemento corresponde a un timestep en el que el modelo elimina ruedo de la imagen."
    ]
   },
   {
@@ -282,7 +282,7 @@
     "id": "vHS3T1pQRFSP"
    },
    "source": [
-    "5. Crear un loop que en cada iteracion utilice el modelo UNet para estimar el residual de ruido y que el Scheduler tomo esto como entrada para predecir la entrada de dicha iteracion."
+    "5. Crear un loop que en cada iteracion utilice el modelo UNet para estimar el residual de ruido y que el Scheduler tome esto como entrada para predecir la entrada de dicha iteracion."
    ]
   },
   {
@@ -343,7 +343,7 @@
    "source": [
     "Stable Diffusion es un modelo que convierte texto a imagen. Es llamado un modelo de *latent diffusion* porque funciona utilizando una representacion comprimida de menos dimensiones que la imagen.\n",
     "\n",
-    "Este pipelin es mas complejo que el anterior ya que contiene un Variational Auto Encoder para esta codificacion de la imagen, un codificador de texto y la UNet y el Scheduler vistos anteriormente.\n",
+    "Este pipeline es mas complejo que el anterior ya que contiene un Variational Auto Encoder para esta codificacion de la imagen, un codificador de texto y la UNet y el Scheduler vistos anteriormente.\n",
     "\n",
     "\n",
     "Carguemos ahora todos estos componentes:"
@@ -881,7 +881,8 @@
     "\n",
     "- [Diffusers](https://huggingface.co/docs/diffusers/quicktour)\n",
     "- [Understanding pipelines, models and schedulers](https://huggingface.co/docs/diffusers/using-diffusers/write_own_pipeline)\n",
-    "- [How does Stable Diffusion work?](https://huggingface.co/blog/stable_diffusion#how-does-stable-diffusion-work)"
+    "- [How does Stable Diffusion work?](https://huggingface.co/blog/stable_diffusion#how-does-stable-diffusion-work)\n",
+    "- [Stable Diffusion from scratch](https://github.com/Animadversio/DiffusionFromScratch )"
    ]
   }
  ],
