--- a/cursos/espanol/deeplearning/LangChain_RAG.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_RAG.ipynb
@@ -344,22 +344,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df8084f8-74c0-4e7b-bdc1-33b31c588aad",
-   "metadata": {},
-   "source": [
-    "### Curso Avanzado\n",
-    "\n",
-    "- https://www.youtube.com/watch?v=3WUobZryyok\n",
-    "- https://learn.deeplearning.ai/courses/vector-databases-embeddings-applications"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "80886959-9793-4c2d-a3ce-46f7504772aa",
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "Esta unidad esta basada en el [curso de Andrew Ng de Deeplearning.ai](https://ai.meta.com/blog/retrieval-augmented-generation-streamlining-the-creation-of-intelligent-natural-language-processing-models/)"
+    "\n",
+    "- [Curso de Andrew Ng de Deeplearning.ai](https://learn.deeplearning.ai/courses/vector-databases-embeddings-applications)\n",
+    "- https://www.youtube.com/watch?v=3WUobZryyok\n",
+    "- https://ai.meta.com/blog/retrieval-augmented-generation-streamlining-the-creation-of-intelligent-natural-language-processing-models/"
    ]
   },
   {
