--- a/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb
@@ -9,8 +9,7 @@
     "\n",
     "[The little book of Deep Learning](https://fleuret.org/public/lbdl.pdf)\n",
     "\n",
-    "[Visualizacion](https://adamharley.com/nn_vis/)\n",
-    "\n"
+    "[Visualizacion](https://adamharley.com/nn_vis/)\n"
    ]
   },
   {
