--- a/cursos/espanol/deeplearning/LangChain_Agents.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Agents.ipynb
@@ -42,12 +42,23 @@
    "source": [
     "import openai\n",
     "\n",
-    "# Cargar token desde google drive\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "    token = f.read()\n",
-    "    openai.api_key = token"
+    "api_key=\"INGRESA AQUI TU TOKEN DE OPENAI\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89c68f13-fd5a-46e2-a445-eb8fb7dffa3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Cargar el token desde gdrive {display-mode:\"form\"}\n",
+    "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
+    "        token = f.read()\n",
+    "        openai.api_key = token"
    ]
   },
   {
