--- a/cursos/espanol/deeplearning/LangChain_RAG.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_RAG.ipynb
@@ -30,18 +30,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e4957e-b641-4f74-966d-3663ac55b445",
+   "id": "8095f412-48f8-4172-b0de-c1ca381353e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
     "\n",
-    "# Cargar token desde google drive\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "    token = f.read()\n",
-    "    openai.api_key = token"
+    "api_key=\"INGRESA AQUI TU TOKEN DE OPENAI\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9e4957e-b641-4f74-966d-3663ac55b445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Cargar el token desde gdrive {display-mode:\"form\"}\n",
+    "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
+    "        token = f.read()\n",
+    "        openai.api_key = token"
    ]
   },
   {
