--- a/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
@@ -31,16 +31,27 @@
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "#Cargar token desde google drive\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
+    "api_key=\"INGRESA AQUI TU TOKEN DE OPENAI\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5296b32-45a5-4609-a941-8ab00f3d95e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Cargar el token desde gdrive {display-mode:\"form\"}\n",
+    "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
     "\n",
-    "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "    token = f.read()\n",
-    "    client = OpenAI(\n",
-    "        # defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
-    "        api_key=token,\n",
-    "    )"
+    "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
+    "        token = f.read()\n",
+    "        client = OpenAI(\n",
+    "            # defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
+    "            api_key=token,\n",
+    "        )"
    ]
   },
   {
