--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -38,12 +38,23 @@
    "source": [
     "import openai\n",
     "\n",
-    "# Cargar token desde google drive\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "    token = f.read()\n",
-    "    openai.api_key = token"
+    "api_key=\"INGRESA AQUI TU TOKEN DE OPENAI\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b920ef7e-c0fa-45b5-bedc-f10c0045565d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Cargar el token desde gdrive {display-mode:\"form\"}\n",
+    "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
+    "        token = f.read()\n",
+    "        openai.api_key = token"
    ]
   },
   {
