title html for videos added

--- a/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install openai --quiet"
+    "!pip install openai --upgrade --quiet"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Cargar el token desde gdrive {display-mode:\"form\"}\n",
+    "#@title [Opcional] cargar el token desde gdrive para que no se vea al dar clases {display-mode:\"form\"}\n",
     "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
