Video link added

--- a/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb
+++ b/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb
@@ -15,6 +15,12 @@
     "\n",
     "![Entrada,Proceso,Salida](img/entrada_proceso_salida.png)\n",
     "\n",
+    "- **La entrada** al programa puede ser a traves de *una camara* en el caso de un auto autonomo, *un sensor* en el caso de un termostato, *un teclado* de una computadora, *un microfono*, etc.\n",
+    "\n",
+    "- **El procesamiento** es el codigo que nosotros escribimos para procesar esa entrada y dar una respuesta.\n",
+    "\n",
+    "- **La salida** es la respuesta que puede ser a traves de un texto o dibujo en una pantalla, un audio, el movimiento de un robot, etc.\n",
+    "\n",
     "En esta unidad la entrada va a estar dada por lo que el usuario ingrese por teclado con la funcion **input()**. El procesamiento va a ser el codigo que escribamos para obtener el resultado deseado y la salida va a estar dada por el resultado que mostremos por pantalla utilizando la funcion **print()**.\n",
     "\n",
     "Veamos ejemplos haciendo ejercicios:"
