Added image to explain functions

--- a/cursos/espanol/programacion/6.1_funciones.ipynb
+++ b/cursos/espanol/programacion/6.1_funciones.ipynb
@@ -73,6 +73,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Resumen:\n",
+    "\n",
+    "![funcion](img/funcion.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A los resultados de estas funciones los podemos guardar tambien en variables y luego utilizarlos.\n",
     "\n",
     "## Ejercicio 1: \n",
