--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Cargar el token desde gdrive {display-mode:\"form\"}\n",
+    "#@title [Opcional] cargar el token desde gdrive para que no se vea al dar clases {display-mode:\"form\"}\n",
     "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
