--- a/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb
+++ b/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "# Entrada\n",
     "numero1 = int(input(\"Ingrese el primer numero:\"))\n",
-    "numero2 = int(input(\"Ingrese el primer numero:\"))\n",
+    "numero2 = int(input(\"Ingrese el segundo numero:\"))\n",
     "\n",
     "# Procesamiento\n",
     "if numero1 > numero2:\n",
@@ -357,7 +357,7 @@
     "\n",
     "# Entrada\n",
     "numero1 = int(input(\"Ingrese el primer numero:\"))\n",
-    "numero2 = int(input(\"Ingrese el primer numero:\"))\n",
+    "numero2 = int(input(\"Ingrese el segundo numero:\"))\n",
     "\n",
     "# Procesamiento\n",
     "contador = 0\n",
