--- a/cursos/espanol/programacion/6.1_funciones.ipynb
+++ b/cursos/espanol/programacion/6.1_funciones.ipynb
@@ -278,7 +278,7 @@
     "\n",
     "# Entrada\n",
     "numero1 = int(input(\"Ingrese el primer numero:\"))\n",
-    "numero2 = int(input(\"Ingrese el primer numero:\"))\n",
+    "numero2 = int(input(\"Ingrese el segundo numero:\"))\n",
     "\n",
     "# Procesamiento\n",
     "if numero1 > numero2:\n",
@@ -311,7 +311,7 @@
     "\n",
     "# Entrada por teclado\n",
     "numero1 = int(input(\"Ingrese el primer numero:\"))\n",
-    "numero2 = int(input(\"Ingrese el primer numero:\"))\n",
+    "numero2 = int(input(\"Ingrese el segundo numero:\"))\n",
     "# Procesamiento utilizando la funcion definida\n",
     "mayor = mayor(numero1, numero2)\n",
     "# Salida por pantalla\n",
@@ -592,7 +592,7 @@
     "\n",
     "# Entrada\n",
     "numero1 = int(input(\"Ingrese el primer numero:\"))\n",
-    "numero2 = int(input(\"Ingrese el primer numero:\"))\n",
+    "numero2 = int(input(\"Ingrese el segundo numero:\"))\n",
     "\n",
     "# Procesamiento\n",
     "contador = 0\n",
@@ -625,7 +625,7 @@
     "\n",
     "# Entrada por teclado\n",
     "numero1 = int(input(\"Ingrese el primer numero:\"))\n",
-    "numero2 = int(input(\"Ingrese el primer numero:\"))\n",
+    "numero2 = int(input(\"Ingrese el segundo numero:\"))\n",
     "\n",
     "total = contar_multiplos_de_3(numero1, numero2)\n",
     "\n",
