Load MNIST from url

--- a/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
@@ -58,10 +58,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zipfile\n",
-    "with zipfile.ZipFile(\"./data/mnist/mnist_train.csv.zip\", 'r') as zip_ref:\n",
+    "#import zipfile\n",
+    "#with zipfile.ZipFile(\"./data/mnist/mnist_train.csv.zip\", 'r') as zip_ref:\n",
+    "#    zip_ref.extractall(\"./data/mnist/extracted/\")\n",
+    "#with zipfile.ZipFile(\"./data/mnist/mnist_test.csv.zip\", 'r') as zip_ref:\n",
+    "#    zip_ref.extractall(\"./data/mnist/extracted/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2e004a-a15a-4b3f-a8d8-c4e21b46df84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests, zipfile, io\n",
+    "r = requests.get(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/mnist/mnist_train.csv.zip\")\n",
+    "with zipfile.ZipFile(io.BytesIO(r.content), 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"./data/mnist/extracted/\")\n",
-    "with zipfile.ZipFile(\"./data/mnist/mnist_test.csv.zip\", 'r') as zip_ref:\n",
+    "r = requests.get(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/mnist/mnist_test.csv.zip\")\n",
+    "with zipfile.ZipFile(io.BytesIO(r.content), 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"./data/mnist/extracted/\")"
    ]
   },
