--- a/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb
@@ -140,15 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5067b433-267d-43b4-a1d2-e8dcddcdcf9d",
+   "execution_count": null,
+   "id": "f78e21d7-d424-4efb-aa61-673a73aa8c3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zipfile\n",
-    "with zipfile.ZipFile(\"./data/mnist/mnist_train.csv.zip\", 'r') as zip_ref:\n",
+    "import requests, zipfile, io\n",
+    "r = requests.get(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/mnist/mnist_train.csv.zip\")\n",
+    "with zipfile.ZipFile(io.BytesIO(r.content), 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"./data/mnist/extracted/\")\n",
-    "with zipfile.ZipFile(\"./data/mnist/mnist_test.csv.zip\", 'r') as zip_ref:\n",
+    "r = requests.get(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/mnist/mnist_test.csv.zip\")\n",
+    "with zipfile.ZipFile(io.BytesIO(r.content), 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"./data/mnist/extracted/\")"
    ]
   },
