--- a/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb
@@ -145,10 +145,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zipfile\n",
-    "with zipfile.ZipFile(\"./data/mnist/mnist_train.csv.zip\", 'r') as zip_ref:\n",
+    "import requests, zipfile, io\n",
+    "r = requests.get(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/mnist/mnist_train.csv.zip\")\n",
+    "with zipfile.ZipFile(io.BytesIO(r.content), 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"./data/mnist/extracted/\")\n",
-    "with zipfile.ZipFile(\"./data/mnist/mnist_test.csv.zip\", 'r') as zip_ref:\n",
+    "r = requests.get(\"https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/mnist/mnist_test.csv.zip\")\n",
+    "with zipfile.ZipFile(io.BytesIO(r.content), 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"./data/mnist/extracted/\")"
    ]
   },
