--- a/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
@@ -439,9 +439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
