Insights bug fix

--- a/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
+++ b/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb
@@ -251,7 +251,8 @@
    "outputs": [],
    "source": [
     "model.compile(optimizer='adam',\n",
-    "              loss=\"categorical_crossentropy\",\n",
+    "              #loss=\"sparse_categorical_crossentropy\",#para y=numero\n",
+    "              loss=\"categorical_crossentropy\",#para y=one_hot_encoding\n",
     "              metrics=['accuracy'])"
    ]
   },
