--- a/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "[Deep NN course](https://fleuret.org/dlc/)\n",
     "\n",
+    "[Visualization](https://bbycroft.net/llm)\n",
+    "\n",
     "[Implement a transformer from scratch with keras](https://keras.io/guides/keras_nlp/transformer_pretraining/)\n",
     "\n",
     "[Implement a transformer from scratch with pytorch](https://mohitkpandey.github.io/posts/2020/11/trfm-code/)\n",
