Added Unit 8 video

--- a/cursos/espanol/programacion/8_for.ipynb
+++ b/cursos/espanol/programacion/8_for.ipynb
@@ -5,7 +5,7 @@
    "id": "65c28033-60c7-407f-8f53-599b5ad53a47",
    "metadata": {},
    "source": [
-    "# Para cada elemento de una lista (for)"
+    "# Para cada elemento de la lista (bucle for)"
    ]
   },
   {
